Fix spacings

--- a/css/style.css
+++ b/css/style.css
@@ -189,24 +189,28 @@ img{
     background-color: white;
     border: 2px solid #e2454c;
     color: #e2454c;
+    border-radius: 5px;
 }
 
 .btnTlk:hover{
     background-color: #e2454c;
     color: white;
     border: 2px solid #fff;
+    border-radius: 5px;
 }
 
 .btnCon{
     background-color: #e2454c;
     border: 2px solid #e2454c;
     color: white;
+    border-radius: 5px;
 }
 
 .btnCon:hover{
     background-color: white;
     border: 2px solid #e2454c;
     color: #e2454c;
+    border-radius: 5px;
 }
 
 .profile{
